@@ -49,19 +49,53 @@
 	</TEXT>
 	<TEXT>
 		<Tag>TXT_KEY_CIV4LERTS_ON_WORST_ENEMY</Tag>
-		<English>[COLOR_YIELD_FOOD]%s1 is the worst enemy of %s2.[COLOR_REVERT]</English>
-		<French>[COLOR_YIELD_FOOD]%s1 is the worst enemy of %s2.[COLOR_REVERT]</French>
-		<German>[COLOR_YIELD_FOOD]%s1 ist der Erzfeind von %s2.[COLOR_REVERT]</German>
-		<Italian>[COLOR_YIELD_FOOD]%s1 is the worst enemy of %s2.[COLOR_REVERT]</Italian>
-		<Spanish>[COLOR_YIELD_FOOD]%s1 is the worst enemy of %s2.[COLOR_REVERT]</Spanish>
+		<English>[COLOR_YIELD_FOOD]%s2 is the worst enemy of %s1.[COLOR_REVERT]</English>
+		<French>[COLOR_YIELD_FOOD]%s2 is the worst enemy of %s1.[COLOR_REVERT]</French>
+		<German>[COLOR_YIELD_FOOD]%s2 ist der Erzfeind von %s1.[COLOR_REVERT]</German>
+		<Italian>[COLOR_YIELD_FOOD]%s2 is the worst enemy of %s1.[COLOR_REVERT]</Italian>
+		<Spanish>[COLOR_YIELD_FOOD]%s2 is the worst enemy of %s1.[COLOR_REVERT]</Spanish>
+	</TEXT>
+	
+	<TEXT>
+		<Tag>TXT_KEY_CIV4LERTS_ON_SWITCH_WORST_ENEMY_FROM_YOU</Tag>
+		<English>[COLOR_YIELD_FOOD]%s2 is the new worst enemy of %s1 (was you).[COLOR_REVERT]</English>
+		<French>[COLOR_YIELD_FOOD]%s2 is the new worst enemy of %s1 (was you).[COLOR_REVERT]</French>
+		<German>[COLOR_YIELD_FOOD]%s2 ist der neue Erzfeind von %s1 (war Ihr).[COLOR_REVERT]</German>
+		<Italian>[COLOR_YIELD_FOOD]%s2 is the new worst enemy of %s1 (was you).[COLOR_REVERT]</Italian>
+		<Spanish>[COLOR_YIELD_FOOD]%s2 is the new worst enemy of %s1 (was you).[COLOR_REVERT]</Spanish>
 	</TEXT>
 	<TEXT>
+		<Tag>TXT_KEY_CIV4LERTS_ON_SWITCH_WORST_ENEMY_TO_YOU</Tag>
+		<English>[COLOR_YIELD_FOOD]You are the new worst enemy of %s1 (was %s2).[COLOR_REVERT]</English>
+		<French>[COLOR_YIELD_FOOD]You are the new worst enemy of %s1 (was %s2).[COLOR_REVERT]</French>
+		<German>[COLOR_YIELD_FOOD]Ihr seid  neue Erzfeind von %s1 (war %s2).[COLOR_REVERT]</German>
+		<Italian>[COLOR_YIELD_FOOD]You are the new worst enemy of %s1 (was %s2).[COLOR_REVERT]</Italian>
+		<Spanish>[COLOR_YIELD_FOOD]You are the new worst enemy of %s1 (was %s2).[COLOR_REVERT]</Spanish>
+	</TEXT>
+	<TEXT>
+		<Tag>TXT_KEY_CIV4LERTS_ON_SWITCH_WORST_ENEMY</Tag>
+		<English>[COLOR_YIELD_FOOD]%s2 is the new worst enemy of %s1 (was %s3).[COLOR_REVERT]</English>
+		<French>[COLOR_YIELD_FOOD]%s2 is the new worst enemy of %s1 (was %s3).[COLOR_REVERT]</French>
+		<German>[COLOR_YIELD_FOOD]%s2 ist der neue Erzfeind von %s1 (war %s3).[COLOR_REVERT]</German>
+		<Italian>[COLOR_YIELD_FOOD]%s2 is the new worst enemy of %s1 (was %s3).[COLOR_REVERT]</Italian>
+		<Spanish>[COLOR_YIELD_FOOD]%s2 is the new worst enemy of %s1 (was %s3).[COLOR_REVERT]</Spanish>
+	</TEXT>
+	
+	<TEXT>
 		<Tag>TXT_KEY_CIV4LERTS_ON_NO_WORST_ENEMY</Tag>
-		<English>[COLOR_POSITIVE_TEXT]%s1 has no worst enemy.[COLOR_REVERT]</English>
-		<French>[COLOR_POSITIVE_TEXT]%s1 has no worst enemy.[COLOR_REVERT]</French>
-		<German>[COLOR_POSITIVE_TEXT]%s1 hat keinen Erzfeind.[COLOR_REVERT]</German>
-		<Italian>[COLOR_POSITIVE_TEXT]%s1 has no worst enemy.[COLOR_REVERT]</Italian>
-		<Spanish>[COLOR_POSITIVE_TEXT]%s1 has no worst enemy.[COLOR_REVERT]</Spanish>
+		<English>[COLOR_POSITIVE_TEXT]%s2 is no longer the worst enemy of %s1.[COLOR_REVERT]</English>
+		<French>[COLOR_POSITIVE_TEXT]%s2 is no longer the worst enemy of %s1.[COLOR_REVERT]</French>
+		<German>[COLOR_POSITIVE_TEXT]%s2 ist nicht mehr der Erzfeind von %s1.[COLOR_REVERT]</German>
+		<Italian>[COLOR_POSITIVE_TEXT]%s2 is no longer the worst enemy of %s1.[COLOR_REVERT]</Italian>
+		<Spanish>[COLOR_POSITIVE_TEXT]%s2 is no longer the worst enemy of %s1.[COLOR_REVERT]</Spanish>
+	</TEXT>
+	<TEXT>
+		<Tag>TXT_KEY_CIV4LERTS_ON_YOU_NO_WORST_ENEMY</Tag>
+		<English>[COLOR_POSITIVE_TEXT]You are no longer the worst enemy of %s1.[COLOR_REVERT]</English>
+		<French>[COLOR_POSITIVE_TEXT]You are no longer the worst enemy of %s1.[COLOR_REVERT]</French>
+		<German>[COLOR_POSITIVE_TEXT]Ihr seid nicht mehr der Erzfeind von %s1.[COLOR_REVERT]</German>
+		<Italian>[COLOR_POSITIVE_TEXT]You are no longer the worst enemy of %s1.[COLOR_REVERT]</Italian>
+		<Spanish>[COLOR_POSITIVE_TEXT]You are no longer the worst enemy of %s1.[COLOR_REVERT]</Spanish>
 	</TEXT>
 	
 	<TEXT>
